--- a/p3/serverlogs/2.config
+++ b/p3/serverlogs/2.config
@@ -4,8 +4,10 @@ NUM_SERVERS=3
 ELECTION_TIMEOUT_OVERRIDE=600
 NUM_SERVERS=3
 CURRENT_TERM=2
-VOTED_FOR=3
+VOTED_FOR=0
 CURRENT_TERM=3
 VOTED_FOR=2
 CURRENT_TERM=4
-VOTED_FOR=0
+VOTED_FOR=2
+CURRENT_TERM=5
+VOTED_FOR=1
