--- a/p3/serverlogs/3.config
+++ b/p3/serverlogs/3.config
@@ -6,6 +6,8 @@ NUM_SERVERS=3
 CURRENT_TERM=2
 VOTED_FOR=3
 CURRENT_TERM=3
-VOTED_FOR=0
+VOTED_FOR=3
 CURRENT_TERM=4
 VOTED_FOR=3
+CURRENT_TERM=5
+VOTED_FOR=1
